Media queries avanzate

--- a/Media Queries/CodingTeoria/index.html
+++ b/Media Queries/CodingTeoria/index.html
@@ -25,5 +25,27 @@
         </div>
     </div>
 
+    <div class="form">
+        <form action="">
+            <div>
+                <input type="text" placeholder="Nome">
+            </div>
+            <div>
+                <input type="text" placeholder="Cognome">
+            </div>
+            <div>
+                <input type="text" placeholder="Indirizzo">
+            </div>
+            <div>
+                <input type="text" placeholder="C.F.">
+            </div>
+            <div>
+                <button>
+                    Invia
+                </button>
+            </div>
+        </form>
+    </div>
+
 </body>
 </html>
