--- a/CSSPositioning/Esercizio/articolo.html
+++ b/CSSPositioning/Esercizio/articolo.html
@@ -37,7 +37,9 @@
             <h1>Come creare un <span>template per i post <img src="./assets/img/underline.svg" alt="underline"></span> </h1>
             <p><i class="fas fa-pen-square"></i> di Mario Rossi - <span><i class="fas fa-clock"></i> pubblicato il
                     25-10-2020</span></p>
-            <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70">
+                    <div>
+                        <img src="./assets/img/badge.png" class="imgLeft" alt="logo Html5" width="70" height="70">
+                    </div>
             <p> La prima cosa
                 da
                 fare è suddividere in blocchi logici la pagina, identificando le <strong>parti comuni</strong> da
