--- a/FlexBox/CodingTeoria/index.html
+++ b/FlexBox/CodingTeoria/index.html
@@ -8,21 +8,59 @@
 </head>
 <body>
     <div class="container">
-        <div class="children">
-            <p>test test dfhfghfhfghtest</p>
-        </div>
+        <header>
+            <div class="brand">
+                <div class="logo"></div>
+                <h2>Testo presentazione</h2>
+            </div>
+            <div class="menu">
+                <ul>
+                    <li>Link1</li>
+                    <li>Link2</li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div class="article">
+                <div class="image"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum doloremque officia numquam? Nostrum quibusdam omnis temporibus repellendus fuga, magnam dolores fugiat quidem suscipit, repellat quis consequatur incidunt! Repellat, facere distinctio.</p>
+            </div>
 
-        <div class="children">
-            <p>test test dfhfghfhfghtest</p>
-        </div>
+            <hr>
 
-        
-        <div class="children2">
-            <p>Lorem ipsum dus facilisdsfgdgdfgdfgfdgfdsgdsfgfffff</p>
-        </div>
+            <div class="article reverse">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum doloremque officia numquam? Nostrum quibusdam omnis temporibus repellendus fuga, magnam dolores fugiat quidem suscipit, repellat quis consequatur incidunt! Repellat, facere distinctio.</p>
+                <div class="image"></div>
+            </div>
 
-        </div>
+            <hr>
 
+            <div class="article">
+                <div class="image"></div>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum doloremque officia numquam? Nostrum quibusdam omnis temporibus repellendus fuga, magnam dolores fugiat quidem suscipit, repellat quis consequatur incidunt! Repellat, facere distinctio.</p>
+            </div>
+
+            <hr>
+
+            <div class="article">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum doloremque officia numquam? Nostrum quibusdam omnis temporibus repellendus fuga, magnam dolores fugiat quidem suscipit, repellat quis consequatur incidunt! Repellat, facere distinctio.</p>
+                <div class="image"></div>
+            </div>
+        </main>
+        <footer>
+            <div class="footer">
+                <p>Footer del sito con indirizzo e mail e telefono</p>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
+
+
+
+
+
+<!--
+     ESEMPIO SITO WEB FLEXBOX
+    ORDINAMENTO MOBILE 
+-->
