--- a/FlexBox/Esercizio/complete-flex-layout-responsive/index.html
+++ b/FlexBox/Esercizio/complete-flex-layout-responsive/index.html
@@ -40,7 +40,7 @@
                             <div class="prod__price">7€/kg</div>
                         </div>
                         <div class="prod__cta">
-                            <button>Aggiungi al Carrello</button>
+                            <button>Carrello</button>
                         </div>
                     </div>
                 </div>
@@ -55,7 +55,7 @@
                             <div class="prod__price">7€/kg</div>
                         </div>
                         <div class="prod__cta">
-                            <button>Aggiungi al Carrello</button>
+                            <button>Carrello</button>
                         </div>
                     </div>
                 </div>
@@ -70,7 +70,7 @@
                             <div class="prod__price">7€/kg</div>
                         </div>
                         <div class="prod__cta">
-                            <button>Aggiungi al Carrello</button>
+                            <button>Carrello</button>
                         </div>
                     </div>
                 </div>
@@ -85,7 +85,7 @@
                             <div class="prod__price">7€/kg</div>
                         </div>
                         <div class="prod__cta">
-                            <button>Aggiungi al Carrello</button>
+                            <button>Carrello</button>
                         </div>
                     </div>
                 </div>
@@ -100,7 +100,7 @@
                             <div class="prod__price">7€/kg</div>
                         </div>
                         <div class="prod__cta">
-                            <button>Aggiungi al Carrello</button>
+                            <button>Carrello</button>
                         </div>
                     </div>
                 </div>
